// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlexItem /> renders div  with default value 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
/>
`;

exports[`<FlexItem /> renders div with flex-basis specified 1`] = `
.c0 {
  -webkit-flex: 1 100%;
  -ms-flex: 1 100%;
  flex: 1 100%;
}

<div
  className="c0"
/>
`;

exports[`<FlexItem /> renders div with flex-grow specified 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
/>
`;

exports[`<FlexItem /> renders div with flex-shrink specified 1`] = `
.c0 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
}

<div
  className="c0"
/>
`;
